Added the support for getting blob URLs to LargeBlobs, also added methods ListAsync and ListWithMetadataAsync for listing all entities in the table. Added tests for blob URLs. Added a lot of comments/xml docs.

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -9,4 +9,4 @@
 	- introduce null behavior: decide whether to remove the property or ignore null values in merge operations.
 	- requires a lot of work, basically will need to forget EntityPropertyConverter.Flatten and ConvertBack and implement it all by myself
 - test validations fully
-- LargeBlob.GetUrl
+- note: input streams should be seekable and support getting Length
